assets/css/main.css
body {
  padding-top: 60px;
  background-color: white;
}
.pointer {
  cursor: pointer;
}
.ui.fixed.top.menu {
  background-color: black;
}
.ui.fixed.top.menu .item {
  color: #FFFFFF;
}
.ui.fixed.top.menu .ui.popup .item {
  color: #000000;
}
.ui.fixed.top.menu #toggle {
  display: none;
}
@media (max-width: 768px) {
  #home-button {
    display: none;
  }
  .ui.fixed.top.menu #toggle {
    display: block;
  }
}
.ui.sidebar.vertical.menu {
  padding-top: 70px;
}
.ui.sidebar.vertical.menu .item,
.ui.sidebar.vertical.menu .title {
  color: #FFFFFF;
  font-size: 14px;
}
.ui.sidebar.vertical.menu .title {
  padding: 0px 0px;
}
.ui.white.header {
  color: white !important;
}
.section {
  padding: 30px 10px;
}
.section.one {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url('../img/gg/JPEGs/neck.jpg');
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  -moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
  -o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
  -webkit-filter: grayscale(100%);
  filter: gray;
}
}
@media (max-width: 768px) {
.section.one {
    height:100vh;
  }
}
.section.one .grid {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px;
}
.section.one .grid .header.title {
  font-size: 50px;
}
.section.one .grid .header.sub {
  font-size: 15px;
}
.section.one .grid .header.sub .upper {
  margin-top: 40px;
  font-weight: bold;
  font-size: 17px;
  text-transform: uppercase;
}
.section.two {
  background-color: #FFFFFF;
  min-height: 450px;
}
.section.two .grid:not(.animated) {
  visibility: hidden;
}
.section.three {
  background-color: #FFFFFF;
  min-height: 470px;
}
.section.four {
  background-image: url('../img/gg/JPEGs/greg-in-studio.jpg');
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height:50rem;
  display:flex;
  align-items: center;
  justify-content: center;
}
.section.five {
  background-color: #FFFFFF;
  min-height: 470px;
}
.section.six {
  background-color: black;
  min-height: 600px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow:column;
  color:white;
}
#section-six-flex {
  display:flex;
  flex-flow: row;
  width:100%;
  align-items: center;
  justify-content: center;
}
.section.seven {
  background-color:#DDDDDD;
}
.ui.fluid.button {
  background-color: white;
  color:black;
}
.ui.fluid.button:hover {
  background-color:#DDDDDD;
}
.item:hover {
  background-color:#2e2e2e !important;
}
.ui.secondary.vertical.menu .item:hover {
  background-color:#DDDDDD !important;
}
.ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui) {
  text-align:center;
}
.description {
  display: flex;
  justify-content: center;
  align-items: center;
}
#collection-display {
  display: none;
}
#collection-header {
  text-align: center;
  font-size:5rem;
  font-family: 'Marck Script', cursive;
  font-weight:400;
}
.ui.stackable.card .image, .ui.fluid.card .image {
  background:center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height:80% !important;
}
#collection-display {
  margin:4rem;
}
.ui.fluid.card {
  height:30rem;
}
.ui.stackable.card  {
  height:20rem;
  box-shadow:none;
  padding:3rem;
  color:black;
}
.ui.stackable.card .content {
  background-color:#fafafa;
}
.ui.fluid.button {
  border:3px solid LightGray;
}
#headshot-img {
  object-fit: contain;
}
#gregs-headshot {
  width:100%;
}
#contact-info {
  color:white;
  font-size:5rem;
  width:30%;
  height:100%;
}
#about-greg-text {
  height:100%;
  word-wrap: break-word;
  white-space: normal;
  color:white;
  font-size:3rem;
}
#contact-info, .center {
  text-align:center;
}
#greg-hidden-slider {
  width:20%;
}
.scroll-description, .scroll-description-mobile {
  color:DarkGray;
  text-align: center;
}
#scroll-description-mobile {
  display: none;
}
#about-greg-header {
  color:white;
}
#card-holder {
  display:flex;
  align-items: center;
  justify-content: center;
}
.featherlight-content {
      max-height: 90% !important;
      max-width: 90% !important;
      padding: 0px 0px 0 !important;
      border: 0px solid transparent !important;
    }
@media only screen and (max-width: 1024px) {
  .section.four {
      background-image: url('../img/gg/JPEGs/greg-in-studio-mobile.png');
    }
  .section.one {
      background-image: url('../img/gg/JPEGs/neck-mobile.png');
  }
  }
@media only screen and (max-device-width: 714px) {
    #navbar-menu-browser, #scroll-description {
      display: none;
    }
    #left-slider-flex {
      display:flex;
      flex-flow:column;
      align-items: center;
      justify-content: space-around;
      font-size:3rem;
      height:100%;
      background-color:black;
    }
    #left-slider-flex a {
      color:white;
      font-family: 'Marck Script', cursive;
      font-weight:400;
    }
    #mobile-collections-dropdown a{
      color:black;
      font-family:none;
    }
    i {
      color:white;
    }
    .menu-right {
      display:flex;
      align-items: center;
      justify-content: center;
      width:100%;
    }
    #section-five .ui.fluid.card {
      padding:1rem;
    }
    #section-six-flex {
      flex-flow: column;
    }
    #greg-hidden-slider {
      width:90%;
    }
    #contact-info {
      margin-top:2rem;
      width:90%;
    }
    #scroll-description-mobile {
      display: block;
    }
    .ui.stackable.card  {
      height:auto;
      box-shadow:none;
      padding:3rem;
      color:black;
    }
}

